tests/src/frontend/runtime/invalid/main_return.sk
fun main(): Int {
  1
}
